# learn-ocaml-workshop

02-exercises/01-introduction/: problem.ml
02-exercises/09-list_range/: problem.ml
02-exercises/15-options/: problem.ml  problem.mli
02-exercises/16-tuples/: problem.ml
02-exercises/17-records/: problem.ml
02-exercises/18-mutable_records/: problem.ml
02-exercises/19-refs/: problem.ml
02-exercises/20-anonymous_functions/: problem.ml
02-exercises/21-reading_sigs/: problem.ml
03-frogger/: README.org  dune  frogger.ml
03-frogger/test-js-of-ocaml-install/: dune
solutions/frogger/: frogger.ml
